fix: PoppyDB use fixed thread pool instead of virtual threads
Virtual threads caused OOM: hundreds of threads accumulated waiting
on InMemoryDriver's per-collection write lock, each consuming stack
memory. Under parallel test load (500 writes), this exhausted heap.

Switch to fixed thread pool (max(16, 2*CPUs)) which bounds memory
while still offloading from Netty I/O threads. The pool provides
enough parallelism for concurrent collection access while preventing
unbounded thread accumulation on contended locks.